@@ -1,7 +1,11 @@
+2005-04-07  Sam Steingold  <sds@gnu.org>
+
+	* utils/modprep.lisp (print-tables-1): added casts for C++ compilation
+
 2005-04-07  Bruno Haible  <bruno@clisp.org>
 
-	* .gdbinit (boot, base, full, interpreted, run_test, run_all_tests,
-	ansi_tests): Add -N locale option.
+	* .gdbinit (boot, base, full, interpreted, run_test, run_all_tests)
+	(ansi_tests): Add -N locale option.
 
 2005-04-06  Sam Steingold  <sds@gnu.org>
 
